--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Code\learn_lessons\12901.cs" />
     <Compile Include="Code\learn_lessons\12910.cs" />
     <Compile Include="Code\learn_lessons\12912.cs" />
+    <Compile Include="Code\learn_lessons\12915.cs" />
     <Compile Include="Code\learn_lessons\42748.cs" />
     <Compile Include="Code\learn_lessons\42840.cs" />
     <Compile Include="Code\learn_lessons\42862.cs" />
