--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Code\learn_lessons\12917.cs" />
     <Compile Include="Code\learn_lessons\12918.cs" />
     <Compile Include="Code\learn_lessons\12919.cs" />
+    <Compile Include="Code\learn_lessons\12922.cs" />
     <Compile Include="Code\learn_lessons\42748.cs" />
     <Compile Include="Code\learn_lessons\42840.cs" />
     <Compile Include="Code\learn_lessons\42862.cs" />
