--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Code\learn_lessons\12919.cs" />
     <Compile Include="Code\learn_lessons\12922.cs" />
     <Compile Include="Code\learn_lessons\12925.cs" />
+    <Compile Include="Code\learn_lessons\12926.cs" />
     <Compile Include="Code\learn_lessons\42748.cs" />
     <Compile Include="Code\learn_lessons\42840.cs" />
     <Compile Include="Code\learn_lessons\42862.cs" />
