--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Code\learn_lessons\12930.cs" />
     <Compile Include="Code\learn_lessons\12932.cs" />
     <Compile Include="Code\learn_lessons\12933.cs" />
+    <Compile Include="Code\learn_lessons\12934.cs" />
     <Compile Include="Code\learn_lessons\42748.cs" />
     <Compile Include="Code\learn_lessons\42840.cs" />
     <Compile Include="Code\learn_lessons\42862.cs" />
