--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -43,32 +43,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Code\learn_lessons\12901.cs" />
-    <Compile Include="Code\learn_lessons\12910.cs" />
-    <Compile Include="Code\learn_lessons\12912.cs" />
-    <Compile Include="Code\learn_lessons\12915.cs" />
-    <Compile Include="Code\learn_lessons\12917.cs" />
-    <Compile Include="Code\learn_lessons\12918.cs" />
-    <Compile Include="Code\learn_lessons\12919.cs" />
-    <Compile Include="Code\learn_lessons\12922.cs" />
-    <Compile Include="Code\learn_lessons\12925.cs" />
-    <Compile Include="Code\learn_lessons\12926.cs" />
-    <Compile Include="Code\learn_lessons\12928.cs" />
-    <Compile Include="Code\learn_lessons\12930.cs" />
-    <Compile Include="Code\learn_lessons\12932.cs" />
-    <Compile Include="Code\learn_lessons\12933.cs" />
-    <Compile Include="Code\learn_lessons\12934.cs" />
-    <Compile Include="Code\learn_lessons\42748.cs" />
-    <Compile Include="Code\learn_lessons\42840.cs" />
-    <Compile Include="Code\learn_lessons\42862.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12901.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12910.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12912.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12915.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12917.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12918.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12919.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12922.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12925.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12926.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12928.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12930.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12932.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12933.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12934.cs" />
+    <Compile Include="Code\learn_lessons\HighScoreKit\Sort\42748.cs" />
+    <Compile Include="Code\learn_lessons\HighScoreKit\BruteForceSearch\42840.cs" />
+    <Compile Include="Code\learn_lessons\HighScoreKit\GreedySearch\42862.cs" />
     <Compile Include="Code\Main.cs" />
-    <Compile Include="Code\learn_lessons\42583.cs" />
+    <Compile Include="Code\learn_lessons\HighScoreKit\StackQueue\42583.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="Code\learn_lessons\12903.cs" />
-    <Compile Include="Code\learn_lessons\12921.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12903.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12921.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Code\skill_checks\" />
