--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Code\learn_lessons\Levels\Level1\12935.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level1\12937.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level1\12940.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12943.cs" />
     <Compile Include="Code\Main.cs" />
     <Compile Include="Code\learn_lessons\HighScoreKit\StackQueue\42583.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
