--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Code\learn_lessons\Levels\Level1\12948.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level1\12950.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level1\12954.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level1\12969.cs" />
     <Compile Include="Code\Main.cs" />
     <Compile Include="Code\learn_lessons\HighScoreKit\StackQueue\42583.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
