--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Code\learn_lessons\Levels\Level2\42746.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42839.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42860.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level2\42883.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\49993.cs" />
     <Compile Include="Code\Main.cs" />
     <Compile Include="Code\learn_lessons\HighScoreKit\StackQueue\42583.cs" />
