--- a/P_Algorithm/P_Algorithm/P_Algorithm.csproj
+++ b/P_Algorithm/P_Algorithm/P_Algorithm.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Code\learn_lessons\Levels\Level2\42587.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42588.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42746.cs" />
+    <Compile Include="Code\learn_lessons\Levels\Level2\42747.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42839.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42860.cs" />
     <Compile Include="Code\learn_lessons\Levels\Level2\42883.cs" />
