--- a/Programmers.csproj
+++ b/Programmers.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Script\learn_lessons\Levels\Level1\Solution86051.cs" />
     <Compile Include="Script\learn_lessons\Levels\Level1\Solution81301.cs" />
     <Compile Include="Script\learn_lessons\Levels\Level1\Solution77484.cs" />
+    <Compile Include="Script\learn_lessons\Levels\Level2\Solution181188.cs" />
     <Compile Include="Script\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script\learn_lessons\HighScoreKit\BruteForceSearch\Solution42840.cs" />
