--- a/Project/Baekjoon/Baekjoon.csproj
+++ b/Project/Baekjoon/Baekjoon.csproj
@@ -84,6 +84,11 @@
     <Compile Include="Project\단계별로 풀어보기\반복문\Baekjoon11021.cs" />
     <Compile Include="Project\단계별로 풀어보기\반복문\Baekjoon8393.cs" />
     <Compile Include="Project\단계별로 풀어보기\반복문\Baekjoon2739.cs" />
+    <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24313.cs" />
+    <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24267.cs" />
+    <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24266.cs" />
+    <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24265.cs" />
+    <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24264.cs" />
     <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24263.cs" />
     <Compile Include="Project\단계별로 풀어보기\시간 복잡도\Baekjoon24262.cs" />
     <Compile Include="Project\단계별로 풀어보기\심화1\Baekjoon1157.cs" />
